refactoring; start creating godoc comments for autogen docs
