# core/core.go
@@ -9,22 +9,37 @@ import (
 	"net/http"
 	"time"
 
+	"github.com/eissar/nest/api"
 	"github.com/eissar/nest/config"
 	trayicon "github.com/eissar/nest/core/tray-icon"
-	"github.com/eissar/nest/eagle/api"
+	_ "github.com/eissar/nest/docs" // docs is generated by Swag CLI, you have to import it.
 	"github.com/eissar/nest/handlers"
 	"github.com/eissar/nest/plugins/nest"
 	"github.com/eissar/nest/render"
 	"github.com/eissar/nest/templates"
 	"github.com/labstack/echo/v4"
 	"github.com/labstack/echo/v4/middleware"
+	"github.com/swaggo/echo-swagger"
 )
 
+// @title Swagger Example API
+// @version 1.0
+// @description This is a sample server Petstore server.
+// @termsOfService http://swagger.io/terms/
+
+// @contact.name API Support
+// @contact.url http://www.swagger.io/support
+// @contact.email support@swagger.io
+
+// @license.name Apache 2.0
+// @license.url http://www.apache.org/licenses/LICENSE-2.0.html
+
+// @host petstore.swagger.io
+// @BasePath /v2
 func Start() {
 	var err error
 
 	nestConfig := config.GetConfig()
-
 	if isPortOccupied(nestConfig.Nest.Port) {
 		log.Fatalf("error starting server: port %d occupied. is the server already running?", nestConfig.Nest.Port)
 	}
@@ -78,9 +93,12 @@ func Start() {
 	server.Static("js", "./assets/js")
 	server.Static("img", "./assets/img")
 
-	// special handler for user-facing static files
+	// @description special handler for user-facing static files
 	// so file endings don't have to be shown in the URI
 	server.GET("/app/*", handlers.StaticAppHandler)
+
+	// DOCS
+	server.GET("/swagger/*", echoSwagger.WrapHandler)
 
 	server.HideBanner = true
 
@@ -119,6 +137,9 @@ func isPortOccupied(port int) bool {
 // func PopulateQueryFrontmatter() {}
 // func PopulateGetRecentNotes()   {}
 
+// ServerShutdown godoc
+//
+//	@Summary close the server?
 func ServerShutdown(c echo.Context) error {
 	var err error
 
@@ -155,6 +176,7 @@ func Shutdown(s *echo.Echo) error {
 // registers routes on the server root (/)
 func RegisterRootRoutes(server *echo.Echo) {
 	//server.GET("/eagle\\://item/:itemId", ServeThumbnailHandler(&n))
+
 	server.GET("/api/server/close", ServerShutdown)
 	server.GET("/api/ping", Ping)
 }
