# plugins/nest/handlers.go
@@ -2,10 +2,8 @@ package nest
 
 import (
 	"fmt"
-	"os"
 
 	"github.com/eissar/nest/config"
-	"github.com/eissar/nest/eagle/api"
 
 	//"github.com/eissar/nest/plugins/pwsh"
 
@@ -15,20 +13,19 @@ import (
 func ServeThumbnailHandler(cfg *config.NestConfig) echo.HandlerFunc {
 	return func(c echo.Context) error {
 		id := c.Param("itemId")
-		if !api.IsValidItemID(id) {
-			res := fmt.Sprintf("get path=%s err=id of `%s` is not valid.", c.Path(), id)
-			return c.JSON(200, res)
+		resFlag := c.Param("fq")
+
+		getThumbnail := func() (string, error) {
+			if resFlag == "true" {
+				return GetEagleThumbnailFullRes(cfg, id)
+			}
+			return GetEagleThumbnail(cfg, id)
 		}
 
-		thumbnail, err := GetEagleThumbnail(cfg, id)
+		thumbnail, err := getThumbnail()
 		if err != nil {
-			res := fmt.Sprintf("get path=%s err=%s", c.Path(), err.Error())
-			return c.String(200, res)
-		}
-		_, err = os.Stat(thumbnail)
-		if err != nil {
-			res := fmt.Sprintf("get path=%s err=%s", c.Path(), err.Error())
-			return c.String(200, res)
+			res := fmt.Sprintf("get thumbnail path=%s err=%s", c.Path(), err.Error())
+			return c.String(400, res)
 		}
 		// filepath exists.
 		return c.File(thumbnail)
